# saas-kerp

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  CLAUDE.md  Makefile  README.md  docker-compose.test.yml  go.mod  go.sum  package-lock.json  package.json
.claude/: README.md  settings.json  settings.local.json
.serena/: project.yml
app/: layout.tsx  page.tsx
config/: app.example.yaml
db/: sqlc.yaml
docs/: .env_ssh.example  DEVELOPMENT_PLAN.docx  DEVELOPMENT_PLAN.md  create_dev_plan_docx.js
python-services/: conftest.py  pytest.ini  requirements-test.txt
python-services/tax-scraper/: .env.example  Dockerfile  Makefile  main.py  pyproject.toml  requirements.txt
python-services/tax-scraper/config/: settings.py
python-services/tax-scraper/proto/: tax.proto
python-services/tax-scraper/providers/: __init__.py  popbill.py
python-services/tax-scraper/scripts/: generate_grpc.sh
python-services/tax-scraper/src/: __init__.py  main.py  server.py
python-services/tax-scraper/src/crypto/: seed.py
python-services/tax-scraper/src/grpc_gen/: __init__.py
python-services/tax-scraper/src/hometax/: __init__.py  constants.py  models.py  scraper.py
python-services/tax-scraper/src/hometax/pages/: __init__.py  issue.py  login.py  search.py
python-services/tax-scraper/src/scrapers/: hometax.py
python-services/tax-scraper/src/services/: __init__.py  tax_service.py
python-services/tax-scraper/src/utils/: __init__.py  logger.py  validators.py
python-services/tax-scraper/tests/: __init__.py  test_hometax_crawl.py  test_models.py  test_tax.py
(+440 files in other folders)
